# RealTime-Map_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  deploy.yaml  deploy_docs.yml
docs/: index.html
docs/api/: my-asyncapi.yml
realtimemap/: .env.example  main.py  my_type.py  pytest.ini  run_main.py
realtimemap/admin/: admin.py
realtimemap/admin/auth/: provider.py
realtimemap/admin/fields/: __init__.py  action_type_field.py  geohash_field.py
realtimemap/admin/model/: __init__.py  base.py  category.py  mark.py  subscription.py  user.py  users_ban.py
realtimemap/admin/view/: home.py
realtimemap/alembic/: env.py
realtimemap/alembic/versions/: 0d9644e245fe_add_exp_fields_in_user_table.py  109a28fac9bc_update_subs_plan.py  2b08f98d27ab_create_message_table.py  2d8e6de35b56_upd_user_subs_table_v2.py  34d9491ac7bd_feat_chats_tables.py  (+31 more)
realtimemap/api/: __init__.py
realtimemap/auth/: base.py  oauth.py  transport.py  user_database.py  user_manager.py
realtimemap/crud/: __init__.py  base.py
realtimemap/database/: __init__.py  dependencies.py  helper.py
realtimemap/dependencies/: checker.py  crud.py  notification.py  service.py  session.py  websocket.py
realtimemap/errors/: __init__.py  base.py  http.py
realtimemap/exceptions/: __init__.py  base.py  http.py
realtimemap/exeptions/: __init__.py  http.py
realtimemap/interfaces/: __init__.py  base.py  category.py  mark.py  message.py  subscription.py  user.py
realtimemap/middleware/: __init__.py  process_time.py  request_blocker.py
realtimemap/models/: __init__.py  access_token.py  base.py  mark.py  task.py  user.py
realtimemap/modules/: __init__.py  base.py
realtimemap/schemas/: mark.py  user.py
realtimemap/services/: base.py
realtimemap/tasks/: __init__.py  some_task.py
realtimemap/templates/: email.html  form.html
realtimemap/tests/: conftest.py  test_main.py
realtimemap/utils/: __init__.py  camel_convert.py  dependency_resolver.py  format_key_word.py  geom_serializator.py  random_username.py  uploader.py  url_generator.py
realtimemap/websocket/: base.py  mark_socket.py
yaak/: yaak.fl_7NF6gdMKYm.yaml  yaak.fl_BhJCR5yfkf.yaml  yaak.fl_CDMfnbafbi.yaml  yaak.fl_JZLpMVdaT2.yaml  yaak.fl_JbHjhYdxRw.yaml  yaak.fl_UJQvbUtxEx.yaml  yaak.fl_UxCbSZuLYD.yaml  yaak.fl_VDuNouwREm.yaml  yaak.fl_atqZ3pLazm.yaml  yaak.fl_mJvk3Azcuc.yaml  yaak.fl_tScKXmeUKz.yaml  yaak.rq_946TSfQRff.yaml  yaak.rq_Da4vTJNvTH.yaml  yaak.rq_DamiWewChx.yaml  yaak.rq_HTs5KpEPJk.yaml  yaak.rq_J7ccsQiN4e.yaml  yaak.rq_KmXTdnk2Vw.yaml  yaak.rq_LjfcryMSRH.yaml  yaak.rq_NzpoBX7WKy.yaml  yaak.rq_RCE9qiJdVF.yaml  yaak.rq_V87LTfiX5X.yaml  yaak.rq_VUMuKPSEK4.yaml  yaak.rq_XvSRvh2Htq.yaml  yaak.rq_qjn9VeFdis.yaml  yaak.rq_sCLUJ2huhW.yaml  yaak.rq_sGqajck6F5.yaml  yaak.rq_tsh5QCVFJD.yaml  yaak.rq_uCZqKoVsrT.yaml  yaak.rq_wwoGuU2Po5.yaml  yaak.rq_yEVhPSB2cq.yaml  yaak.wk_V99Hr7DmhP.yaml
(+337 files in other folders)
